# gtk_bar

./: Cargo.toml
src/: main.rs  styles.css
src/resources/: main_layout.ui
