[package]
name = "gtk_bar"
version = "0.1.0"
edition = "2024"

[features]
x11 = []

[dependencies]
log = "0.4.28"
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
chrono = "0.4.42"

async-channel = "2.5.0"
gtk4 = "0.10.1"
gdk4 = "0.10.1"
